# plonky3-experiments

./: Cargo.toml  README.md  demo_example.txt  rust-toolchain.toml
.cursor/rules/: project-context.mdc
agent_prompts/: circuit.txt  fri.txt  merkle_commitment.txt  prompt_fft_ntt.txt  prompt_field_arthmetic_module.txt  prompt_polynomial_iop.txt  prompt_polynomial_iop_second.txt
docs/: cursor-agent-setup-rust-plonky3.md
src/: air.rs  field_arith.rs  fri.rs  lib.rs  main.rs  merkle.rs  poly.rs  stark.rs
