[package]
name = "plonky3-experiments"
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"

[dependencies]
p3-field = "0.5.2"
p3-matrix = "0.5.2"
p3-goldilocks = "0.5.2"
p3-dft = "0.5.2"
p3-fri = "0.5.2"
p3-merkle-tree = "0.5.2"
p3-symmetric = "0.5.2"
p3-commit = "0.5.2"
p3-challenger = "0.5.2"
p3-air = "0.5.2"
p3-uni-stark = "0.5.2"
rand = "0.10"

[dev-dependencies]
criterion = "0.8.2"
